--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -25,36 +25,118 @@
  </div> -->
 <!-- COVER -->
 <div class="cover" id="cover">
-   <img src="{% static '/images/covers/cover4.jpg' %}" alt="main cover landig page">
-
+   <img src="{% static '/images/covers/cover-mobile.png' %}" alt="main cover landig page">
    <div class="content" id="coverContent">
       <div class="text">
          <h1>Moderne nettsider til lave priser</h1>
          <p>Lave priser, kort leverings tid</p>
          <div class="cover-actions">
             <a href="/om-webiser">Les om oss</a>
-            <a href="/bestill">Kom i gang</a>
          </div>
       </div>
    </div>
 </div>
 
-<br>
-<br>
 
-<!-- PROCCESS -->
+<!-- INFO -->
 <div class="info">
-   <h1 class="heading">Bli kjent med Webiser</h1>
-   <img src="{% static '/images/covers/cover-4.png' %}" alt="image build website pencil people purple vector">
-   <div class="info-text">
-      <p>Webiser er en <span class="light-overlay">nettutvikling firma</span> med et stort team som består av motiverte designere og utviklere som klarer å levere på topp. Designerne sørger for at nettsiden blir akuratt som du vil, og våres utviklere sørger at nettsiden fungerer 100% som den skal. Hos Webiser . . . 
-         <!-- bryr vi oss om kvalitet. Alle nettsider har en <span class="light-overlay">responsiv ov modern</span> desgin, og du kan bestemme selv hvordan nettsiden skal se ut.<br><span class="light-overlay">Prossen av bestilling</span> er enkelt. Du sender inn skjemaet som ligger inne <a style="text-decoration: underline;" href="/bestill">her</a>. Når du har sendt inn skjemaet vil du mota en mail når bestillingen har blitt godkjent<br><span class="light-overlay">Betaling</span> foregår via vipps når design har blitt ferdig laget, og du har bekreftet den<br>Ønsker du <span class="light-overlay">mer informasjon?</span> Les mer -->
-      </p>
-   </div>
-   <div class="info-actions">
-      <a href="/om-webiser">Les mer</a>
+   <div class="content" id="infoContent">
+      <h1 class="heading">Bli kjent</h1>
+      <div class="info-card1" id="infoCard1">
+         CARD1
+      </div>
+      <div class="info-card2" id="infoCard2">
+         CARD2
+      </div>
+      <div class="info-card3" id="infoCard3">
+         CARD3
+      </div>
+      <div class="info-card4" id="infoCard4">
+         CARD4
+      </div>
    </div>
 </div>
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
