--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -20,7 +20,7 @@
 <div id="navbar">
     <!-- LOGO -->
     <div class="logo" id="logo" onclick="window.location.href='/'">
-        <h1>Webiser</h1>
+        <h1>Webiser</h1><img class="logo1" src="{% static '/images/logo/logo1.png' %}" alt="logo1"><img class="logo2" src="{% static '/images/logo/logo2.png' %}" alt="logo2">
     </div>
     <!-- MENU -->
         <!-- HAMBURGER -->
