--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -80,27 +80,40 @@ body{
   width: 100%;
   height: auto;
   position: relative;
+  &::after{
+    content: '';
+    display: block;
+    width: 130px;
+    height: 130px;
+    background: rgba(255, 255, 255, 0.05);
+    position: absolute;
+    right: 20px;
+    top: 150px;
+    border-radius: 100%;
+  }
   img{
     width: 100%;
-    height: 70vh;
+    height: auto;
     filter: brightness(50%);
   }
   .content{
     opacity: 0;
-    transition: .8s ease-in;
-    position: absolute;
+    transition: .8s ease-in-out;
+    position: fixed;
     top: 60px;
-    right: -200px;
+    right: 0;
     width: 100%;
-    padding-left: 15px;
     &.active{
       opacity: 1;
-      right: 0;
+    }
+    &.hide{
+      transition: .4s;
+      opacity: 0;
     }
     .text{
       width: 100%;
       height: auto;
-      text-align: left;
+      text-align: center;
       z-index: 10;
       transform: translateY(80px);
       h1{
@@ -121,6 +134,8 @@ body{
         width: 100%;
         transform: translateY(25px);
         display: flex;
+        justify-content: center;
+        align-items: center;
         a{
           padding: 10px;
           background: transparent;
@@ -128,13 +143,7 @@ body{
           outline: none;
           color: white;
           text-align: center;
-          &:nth-child(1){
-            border: 2px solid rgba(255, 255, 255, 0.329);
-          }
-          &:nth-child(2){
-            transform: translateX(13px);
-            background: rgb(28, 211, 28);
-          }
+          border: 2px solid rgba(255, 255, 255, 0.329);
         }
       }
     }
