--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -1,18 +1,9 @@
-html, body {
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-}
-
-.scroll-to {
-  background: transparent;
-}
-
 .info {
   background: transparent;
   width: 100%;
-  height: 800px;
-  text-align: left;
-  background: #130216;
+  height: 820px;
+  background: #fcfcfc;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.068);
 }
 
 .info .content {
@@ -33,9 +24,12 @@ html, body {
   -webkit-transform: translateX(-30px);
           transform: translateX(-30px);
   font-size: 24px;
-  color: white;
+  color: black;
   padding-left: 15px;
   font-family: 'Lato', sans-serif;
+  text-align: center;
+  margin-bottom: 40px;
+  font-weight: bold;
 }
 
 .info .content .info-card1 {
@@ -51,11 +45,27 @@ html, body {
           transform: translateY(25px);
   -webkit-transition: .8s;
   transition: .8s;
+  -webkit-box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.116);
+          box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.116);
 }
 
 .info .content .info-card1.active {
   opacity: 1;
   right: 5px;
+}
+
+.info .content .info-card1 h1 {
+  font-size: 18px;
+  color: black;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+}
+
+.info .content .info-card1 i {
+  font-size: 52px;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  color: #894CA9;
 }
 
 .info .content .info-card2 {
@@ -68,8 +78,8 @@ html, body {
   left: -75px;
   -webkit-transform: translateY(145px);
           transform: translateY(145px);
-  -webkit-box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.116);
-          box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.116);
+  -webkit-box-shadow: -1px 0px 3px rgba(0, 0, 0, 0.116);
+          box-shadow: -1px 0px 3px rgba(0, 0, 0, 0.116);
   opacity: 0;
   -webkit-transition: .8s;
   transition: .8s;
@@ -78,6 +88,20 @@ html, body {
 .info .content .info-card2.active {
   opacity: 1;
   left: 5px;
+}
+
+.info .content .info-card2 h1 {
+  font-size: 18px;
+  color: black;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+}
+
+.info .content .info-card2 i {
+  font-size: 52px;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  color: #894CA9;
 }
 
 .info .content .info-card3 {
@@ -89,8 +113,8 @@ html, body {
   position: absolute;
   right: -75px;
   opacity: 0;
-  -webkit-transform: translateY(260px);
-          transform: translateY(260px);
+  -webkit-transform: translateY(265px);
+          transform: translateY(265px);
   -webkit-transition: .8s;
   transition: .8s;
   -webkit-box-shadow: -1px 0px 3px rgba(0, 0, 0, 0.116);
@@ -102,6 +126,20 @@ html, body {
   right: 5px;
 }
 
+.info .content .info-card3 h1 {
+  font-size: 18px;
+  color: black;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+}
+
+.info .content .info-card3 i {
+  font-size: 52px;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  color: #894CA9;
+}
+
 .info .content .info-card4 {
   background: #fafafa;
   width: 200px;
@@ -110,8 +148,8 @@ html, body {
   border-radius: 5px;
   position: absolute;
   left: -75px;
-  -webkit-transform: translateY(375px);
-          transform: translateY(375px);
+  -webkit-transform: translateY(382px);
+          transform: translateY(382px);
   -webkit-box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.116);
           box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.116);
   opacity: 0;
@@ -122,6 +160,105 @@ html, body {
 .info .content .info-card4.active {
   opacity: 1;
   left: 5px;
+}
+
+.info .content .info-card4 h1 {
+  font-size: 18px;
+  color: black;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+}
+
+.info .content .info-card4 i {
+  font-size: 52px;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  color: #894CA9;
+}
+
+.cta1 {
+  background: transparent;
+  width: 100%;
+  height: 480px;
+  background: #fcfcfc;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.068);
+}
+
+.cta1 .cta1-content {
+  padding-top: 80px;
+  position: relative;
+}
+
+.cta1 .cta1-content.active .heading {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  opacity: 1;
+}
+
+.cta1 .cta1-content .heading {
+  -webkit-transition: .8s ease-in-out;
+  transition: .8s ease-in-out;
+  opacity: 0;
+  -webkit-transform: translateX(-30px);
+          transform: translateX(-30px);
+  font-size: 24px;
+  color: black;
+  padding-left: 15px;
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+  margin-bottom: 40px;
+  font-weight: bold;
+}
+
+.cta1 .cta1-content .text {
+  width: 100%;
+  background: rgba(0, 0, 0, 0.027);
+  text-align: center;
+  padding: 45px;
+  border-radius: 70%;
+  opacity: 0;
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+}
+
+.cta1 .cta1-content .text.active {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.cta1 .cta1-content .text p {
+  opacity: 0.7;
+  color: black;
+}
+
+.cta1 .cta1-content .cta1-action {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(60px) scale(0.7);
+          transform: translateX(-50%) translateY(60px) scale(0.7);
+  opacity: 0;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.cta1 .cta1-content .cta1-action.active {
+  opacity: 1;
+  -webkit-transform: scale(1) translateX(-50%) translateY(60px);
+          transform: scale(1) translateX(-50%) translateY(60px);
+}
+
+.cta1 .cta1-content .cta1-action a {
+  padding: 10px;
+  background: transparent;
+  border-radius: 7px;
+  outline: none;
+  border: none;
+  color: white;
+  text-align: center;
+  background: #1cd31c;
 }
 
 .intro {
