--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -6,8 +6,13 @@
           box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
 body {
-  background: #fafbff;
+  background: red;
 }
 
 .light-overlay {
