--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -104,97 +104,8 @@ body {
 
 .cover {
   width: 100%;
-  height: auto;
-  position: relative;
-}
-
-.cover::after {
-  content: '';
-  display: block;
-  width: 130px;
-  height: 130px;
-  background: rgba(255, 255, 255, 0.05);
-  position: absolute;
-  right: 20px;
-  top: 150px;
-  border-radius: 100%;
-}
-
-.cover img {
-  width: 100%;
-  height: auto;
-  -webkit-filter: brightness(50%);
-          filter: brightness(50%);
-}
-
-.cover .content {
-  opacity: 0;
-  -webkit-transition: .8s ease-in-out;
-  transition: .8s ease-in-out;
-  position: fixed;
-  top: 60px;
-  right: 0;
-  width: 100%;
-}
-
-.cover .content.active {
-  opacity: 1;
-}
-
-.cover .content.hide {
-  -webkit-transition: .4s;
-  transition: .4s;
-  opacity: 0;
-}
-
-.cover .content .text {
-  width: 100%;
-  height: auto;
-  text-align: center;
-  z-index: 10;
-  -webkit-transform: translateY(80px);
-          transform: translateY(80px);
-}
-
-.cover .content .text h1 {
-  color: #f0f0f0;
-  font-size: 34px;
-  font-family: 'Alata', sans-serif;
-  line-height: 160%;
-  font-weight: bold;
-  text-shadow: 0.3px 0.3px 1px white;
-}
-
-.cover .content .text p {
-  color: #f0f0f0;
-  font-size: 16px;
-  font-family: 'Alata', sans-serif;
-  opacity: 0.7;
-}
-
-.cover .content .text .cover-actions {
-  width: 100%;
-  -webkit-transform: translateY(25px);
-          transform: translateY(25px);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.cover .content .text .cover-actions a {
-  padding: 10px;
-  background: transparent;
-  border-radius: 7px;
-  outline: none;
-  color: white;
-  text-align: center;
-  border: 2px solid rgba(255, 255, 255, 0.329);
+  height: 100vh;
+  background: #EAF1F7;
 }
 
 .load-wrapp {
