--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -85,76 +85,8 @@ body{
 // COVER
 .cover{
   width: 100%;
-  height: auto;
-  position: relative;
-  &::after{
-    content: '';
-    display: block;
-    width: 130px;
-    height: 130px;
-    background: rgba(255, 255, 255, 0.05);
-    position: absolute;
-    right: 20px;
-    top: 150px;
-    border-radius: 100%;
-  }
-  img{
-    width: 100%;
-    height: auto;
-    filter: brightness(50%);
-  }
-  .content{
-    opacity: 0;
-    transition: .8s ease-in-out;
-    position: fixed;
-    top: 60px;
-    right: 0;
-    width: 100%;
-    &.active{
-      opacity: 1;
-    }
-    &.hide{
-      transition: .4s;
-      opacity: 0;
-    }
-    .text{
-      width: 100%;
-      height: auto;
-      text-align: center;
-      z-index: 10;
-      transform: translateY(80px);
-      h1{
-        color: rgb(240, 240, 240);
-        font-size: 34px;
-        font-family: 'Alata', sans-serif;
-        line-height: 160%;
-        font-weight: bold;
-        text-shadow: 0.3px 0.3px 1px white;       
-      }
-      p{
-        color: rgb(240, 240, 240);
-        font-size: 16px;
-        font-family: 'Alata', sans-serif;
-        opacity: 0.7;
-      }
-      .cover-actions{
-        width: 100%;
-        transform: translateY(25px);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        a{
-          padding: 10px;
-          background: transparent;
-          border-radius: 7px;
-          outline: none;
-          color: white;
-          text-align: center;
-          border: 2px solid rgba(255, 255, 255, 0.329);
-        }
-      }
-    }
-  }
+  height: 100vh;
+  background: #EAF1F7;
 }
 
 .load-wrapp {
