--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -6,7 +6,7 @@
   background: transparent;
   z-index: 100;
   width: 100%;
-  height: 60px;
+  height: 63px;
   position: fixed;
   top: 0px;
   display: -webkit-box;
@@ -19,36 +19,11 @@
   transition: .2s ease-in-out;
   -webkit-box-shadow: 1px 0px 3px rgba(255, 255, 255, 0.329);
           box-shadow: 1px 0px 3px rgba(255, 255, 255, 0.329);
-  background: rgba(0, 0, 0, 0.25);
-}
-
-#navbar.sticky {
   background: white;
 }
 
-#navbar.sticky .hamburger span {
-  background: #323232;
-}
-
-#navbar.sticky .my-account-icon i {
-  color: #323232;
-}
-
-#navbar.sticky .logo {
-  left: -100px;
-}
-
-#navbar.sticky .logo h1 {
-  color: black;
-  opacity: 0;
-}
-
-#navbar.sticky .logo .logo1 {
-  display: none;
-}
-
-#navbar.sticky .logo .logo2 {
-  display: block;
+#navbar.sticky {
+  background: #ffffffb9;
 }
 
 #navbar .logo {
@@ -56,7 +31,7 @@
   transition: .8s;
   cursor: pointer;
   position: absolute;
-  left: 20px;
+  left: 77px;
   -webkit-transform: translateY(1px);
           transform: translateY(1px);
   width: auto;
@@ -64,42 +39,9 @@
   z-index: 1000;
 }
 
-#navbar .logo h1 {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-  opacity: 1;
-  margin: 0;
-  font-family: 'Indie Flower', cursive;
-  color: #ebebeb;
-  font-size: 26px;
-  -webkit-transition: .2s ease-in-out;
-  transition: .2s ease-in-out;
-}
-
 #navbar .logo img {
   height: auto;
-  width: 28px;
-  position: absolute;
-  left: 95px;
-  top: 8px;
-  -webkit-transition: .8s;
-  transition: .8s;
-}
-
-#navbar .logo img.logo1 {
-  display: block;
-}
-
-#navbar .logo img.logo2 {
-  display: none;
-  width: 50px;
-  -webkit-transform: translateX(40px);
-          transform: translateX(40px);
-  top: 4px;
-}
-
-#navbar .logo.menu-click h1 {
-  color: #ebebeb;
+  width: 120px;
 }
 
 #navbar .hamburger {
@@ -108,7 +50,7 @@
   width: auto;
   height: auto;
   position: absolute;
-  right: 0px;
+  left: 18px;
   z-index: 1000;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -121,7 +63,7 @@
   height: 7px;
   -webkit-transition: .2s;
   transition: .2s;
-  background: #ebebeb;
+  background: #323232;
   border-radius: 100%;
   margin: 3px;
   -webkit-transform: translateX(-9px);
@@ -141,53 +83,52 @@
   margin-top: 15px;
 }
 
-#navbar .hamburger.click span {
-  background: #ebebeb !important;
-}
-
-#navbar .circle {
-  border-radius: 100%;
-  background: #1e1e1e;
-  width: 100px;
-  height: 100px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%) scale(1);
-          transform: translateX(-50%) scale(1);
-  z-index: 100;
-  pointer-events: none;
-  -webkit-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
-  opacity: 0;
-}
-
-#navbar .circle.active {
-  -webkit-transform: scale(20);
-          transform: scale(20);
-  opacity: 1;
-  background: rgba(10, 10, 10, 0.95);
-}
-
 #navbar .sidebar {
-  background: transparent;
+  background: white;
   height: 100vh;
   position: absolute;
   top: 60px;
   right: 0px;
   width: 100%;
-  -webkit-transition: .7s;
-  transition: .7s;
   z-index: 120;
   opacity: 0;
   pointer-events: none;
   display: unset;
 }
 
+#navbar .sidebar .sidebar-cta {
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background: #4287f5;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 1;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+#navbar .sidebar .sidebar-cta a {
+  color: white !important;
+  font-size: 16px;
+}
+
 #navbar .sidebar .sidebar-ul {
   position: relative;
   width: 100%;
-  text-align: center;
+  text-align: left;
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li {
@@ -195,167 +136,207 @@
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li a {
-  border: 2px solid transparent;
-  color: white;
+  color: #082133;
   display: inline-block;
   text-decoration: none;
-  width: 60%;
-  font-size: 18px;
-  margin: 13px auto;
-  padding: 5px;
-  opacity: 0;
-  -webkit-transition: .1s;
-  transition: .1s;
-  -webkit-transition: opacity .3s;
-  transition: opacity .3s;
+  width: 100%;
+  font-weight: 800;
+  font-size: 0.875rem;
+  margin: 18px 0;
+  -webkit-transform: translateX(25px);
+          transform: translateX(25px);
+  cursor: pointer;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li a::after {
+  content: '';
+  display: block;
+  height: 1px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.17);
+  -webkit-transform: translateY(19px) translateX(-25px);
+          transform: translateY(19px) translateX(-25px);
+  position: absolute;
+  left: 0;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li a i {
-  -webkit-transform: translateX(10px);
-          transform: translateX(10px);
-  font-size: 14px;
+  -webkit-transform: translateX(-50px) translateY(5px);
+          transform: translateX(-50px) translateY(5px);
+  font-size: 16px;
   -webkit-transition: .2s !important;
   transition: .2s !important;
+  float: right;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links {
   width: 100%;
-  height: 100vh;
   display: none;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links a {
-  font-size: 16px;
-  margin: 5px;
-  opacity: 0.65 !important;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links.active {
   display: block;
 }
 
+#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links .nav-link-parent {
+  width: 100%;
+  height: 100%;
+  background: #f3f9fd;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links a {
+  -webkit-transform: translateX(45px);
+          transform: translateX(45px);
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links a::after {
+  -webkit-transform: translateY(19px) translateX(-45px);
+          transform: translateY(19px) translateX(-45px);
+}
+
 #navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown #pricesToggle.click {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  color: #8fa9ff;
+  color: #4287f5;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown #pricesToggle.click i {
-  -webkit-transform: rotate(180deg) translateX(-10px);
-          transform: rotate(180deg) translateX(-10px);
+  -webkit-transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+          transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links {
   width: 100%;
-  height: 100vh;
   display: none;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links a {
-  font-size: 16px;
-  margin: 5px;
-  opacity: 0.65 !important;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links.active {
   display: block;
 }
 
+#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links .nav-link-parent {
+  width: 100%;
+  height: 100%;
+  background: #f3f9fd;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links a {
+  -webkit-transform: translateX(45px);
+          transform: translateX(45px);
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links a::after {
+  -webkit-transform: translateY(19px) translateX(-45px);
+          transform: translateY(19px) translateX(-45px);
+}
+
 #navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown #aboutToggle.click {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  color: #8fa9ff;
+  color: #4287f5;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown #aboutToggle.click i {
-  -webkit-transform: rotate(180deg) translateX(-10px);
-          transform: rotate(180deg) translateX(-10px);
+  -webkit-transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+          transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links {
   width: 100%;
-  height: 100vh;
   display: none;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links a {
-  font-size: 16px;
-  margin: 5px;
-  opacity: 0.65 !important;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links.active {
   display: block;
 }
 
+#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links .nav-link-parent {
+  width: 100%;
+  height: 100%;
+  background: #f3f9fd;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links a {
+  -webkit-transform: translateX(45px);
+          transform: translateX(45px);
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links a::after {
+  -webkit-transform: translateY(19px) translateX(-45px);
+          transform: translateY(19px) translateX(-45px);
+}
+
 #navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown #helpToggle.click {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  color: #8fa9ff;
+  color: #4287f5;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown #helpToggle.click i {
-  -webkit-transform: rotate(180deg) translateX(-10px);
-          transform: rotate(180deg) translateX(-10px);
+  -webkit-transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+          transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links {
   width: 100%;
-  height: 100vh;
   display: none;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links a {
-  font-size: 16px;
-  margin: 5px;
-  opacity: 0.65 !important;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links a#logOut {
-  color: #ff2a2a !important;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links.active {
   display: block;
 }
 
+#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links .nav-link-parent {
+  width: 100%;
+  height: 100%;
+  background: #f3f9fd;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links a {
+  -webkit-transform: translateX(45px);
+          transform: translateX(45px);
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links a::after {
+  -webkit-transform: translateY(19px) translateX(-45px);
+          transform: translateY(19px) translateX(-45px);
+}
+
 #navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown #accountToggle.click {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  color: #8fa9ff;
+  color: #4287f5;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown #accountToggle.click i {
-  -webkit-transform: rotate(180deg) translateX(-10px);
-          transform: rotate(180deg) translateX(-10px);
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active a {
-  opacity: 1;
+  -webkit-transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+          transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
 }
 
 #navbar .sidebar.active {
   opacity: 1;
   pointer-events: visible;
+  -webkit-transition: .7s;
+  transition: .7s;
 }
 
 #navbar .order {
   margin: 0;
   position: absolute;
-  right: 80px;
+  right: 15px;
   cursor: pointer;
-  color: white;
-  padding: 5px 5px;
-  width: 80px;
+  color: black;
+  padding: 7px 2px;
+  width: 70px;
   text-align: center;
-  border-radius: 7px;
+  border-radius: 15px;
   -webkit-transition: .2s;
   transition: .2s;
-  font-size: 12px;
+  font-size: 13px;
   border-radius: 4px;
-  background: transparent;
   text-decoration: none;
-  background: #1cd31c;
+  background: white;
+  border: 2px solid black;
 }
 
 @media only screen and (min-device-width: 1024px) {
